[gd_scene load_steps=9 format=2]

[ext_resource path="res://Accets/Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://Accets/Sprites/background.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
extra_spacing_top = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -44.0
margin_top = -90.0
margin_right = 1963.0
margin_bottom = 1210.0
texture = ExtResource( 3 )
stretch_mode = 1

[node name="Score" type="Label" parent="."]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 55.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Life" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -55.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
text = "3"
align = 2

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -60.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -192.5
margin_top = -200.0
margin_right = 192.5
margin_bottom = -74.0
custom_fonts/font = SubResource( 1 )
text = "START"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="ScoreTable" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -496.0
margin_top = -421.0
margin_right = 496.0
margin_bottom = 299.0

[node name="Title" type="Label" parent="ScoreTable"]
margin_right = 992.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 3 )
text = "ScoreTable"
align = 1
valign = 1

[node name="ColumnName" type="HBoxContainer" parent="ScoreTable"]
margin_top = 59.0
margin_right = 992.0
margin_bottom = 106.0
size_flags_horizontal = 3

[node name="Number" type="Label" parent="ScoreTable/ColumnName"]
margin_right = 328.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "#"
align = 1

[node name="Name" type="Label" parent="ScoreTable/ColumnName"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Name"
align = 1

[node name="Score" type="Label" parent="ScoreTable/ColumnName"]
margin_left = 664.0
margin_right = 992.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Score"
align = 1

[node name="Result1" type="HBoxContainer" parent="ScoreTable"]
margin_top = 110.0
margin_right = 992.0
margin_bottom = 157.0
size_flags_horizontal = 3

[node name="Number" type="Label" parent="ScoreTable/Result1"]
margin_right = 328.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "1"
align = 1

[node name="Name" type="Label" parent="ScoreTable/Result1"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "---"
align = 1

[node name="Score" type="Label" parent="ScoreTable/Result1"]
margin_left = 664.0
margin_right = 992.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="Result2" type="HBoxContainer" parent="ScoreTable"]
margin_top = 161.0
margin_right = 992.0
margin_bottom = 208.0
size_flags_horizontal = 3

[node name="Number" type="Label" parent="ScoreTable/Result2"]
margin_right = 328.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "2"
align = 1

[node name="Name" type="Label" parent="ScoreTable/Result2"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "---"
align = 1

[node name="Score" type="Label" parent="ScoreTable/Result2"]
margin_left = 664.0
margin_right = 992.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="Result3" type="HBoxContainer" parent="ScoreTable"]
margin_top = 212.0
margin_right = 992.0
margin_bottom = 259.0
size_flags_horizontal = 3

[node name="Number" type="Label" parent="ScoreTable/Result3"]
margin_right = 328.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "3"
align = 1

[node name="Name" type="Label" parent="ScoreTable/Result3"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "---"
align = 1

[node name="Score" type="Label" parent="ScoreTable/Result3"]
margin_left = 664.0
margin_right = 992.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="Result4" type="HBoxContainer" parent="ScoreTable"]
margin_top = 263.0
margin_right = 992.0
margin_bottom = 310.0
size_flags_horizontal = 3

[node name="Number" type="Label" parent="ScoreTable/Result4"]
margin_right = 328.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "4"
align = 1

[node name="Name" type="Label" parent="ScoreTable/Result4"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "---"
align = 1

[node name="Score" type="Label" parent="ScoreTable/Result4"]
margin_left = 664.0
margin_right = 992.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="Result5" type="HBoxContainer" parent="ScoreTable"]
margin_top = 314.0
margin_right = 992.0
margin_bottom = 361.0
size_flags_horizontal = 3

[node name="Number" type="Label" parent="ScoreTable/Result5"]
margin_right = 328.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "5"
align = 1

[node name="Name" type="Label" parent="ScoreTable/Result5"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "---"
align = 1

[node name="Score" type="Label" parent="ScoreTable/Result5"]
margin_left = 664.0
margin_right = 992.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="Result6" type="HBoxContainer" parent="ScoreTable"]
margin_top = 365.0
margin_right = 992.0
margin_bottom = 412.0
size_flags_horizontal = 3

[node name="Number" type="Label" parent="ScoreTable/Result6"]
margin_right = 328.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "6"
align = 1

[node name="Name" type="Label" parent="ScoreTable/Result6"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "---"
align = 1

[node name="Score" type="Label" parent="ScoreTable/Result6"]
margin_left = 664.0
margin_right = 992.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="Result7" type="HBoxContainer" parent="ScoreTable"]
margin_top = 416.0
margin_right = 992.0
margin_bottom = 463.0
size_flags_horizontal = 3

[node name="Number" type="Label" parent="ScoreTable/Result7"]
margin_right = 328.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "7"
align = 1

[node name="Name" type="Label" parent="ScoreTable/Result7"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "---"
align = 1

[node name="Score" type="Label" parent="ScoreTable/Result7"]
margin_left = 664.0
margin_right = 992.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="Result8" type="HBoxContainer" parent="ScoreTable"]
margin_top = 467.0
margin_right = 992.0
margin_bottom = 514.0
size_flags_horizontal = 3

[node name="Number" type="Label" parent="ScoreTable/Result8"]
margin_right = 328.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "8"
align = 1

[node name="Name" type="Label" parent="ScoreTable/Result8"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "---"
align = 1

[node name="Score" type="Label" parent="ScoreTable/Result8"]
margin_left = 664.0
margin_right = 992.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="Result9" type="HBoxContainer" parent="ScoreTable"]
margin_top = 518.0
margin_right = 992.0
margin_bottom = 565.0
size_flags_horizontal = 3

[node name="Number" type="Label" parent="ScoreTable/Result9"]
margin_right = 328.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "9"
align = 1

[node name="Name" type="Label" parent="ScoreTable/Result9"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "---"
align = 1

[node name="Score" type="Label" parent="ScoreTable/Result9"]
margin_left = 664.0
margin_right = 992.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="Result10" type="HBoxContainer" parent="ScoreTable"]
margin_top = 569.0
margin_right = 992.0
margin_bottom = 616.0
size_flags_horizontal = 3

[node name="Number" type="Label" parent="ScoreTable/Result10"]
margin_right = 328.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "10"
align = 1

[node name="Name" type="Label" parent="ScoreTable/Result10"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "---"
align = 1

[node name="Score" type="Label" parent="ScoreTable/Result10"]
margin_left = 664.0
margin_right = 992.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="GameOver" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -228.0
margin_top = -66.0
margin_right = 228.0
margin_bottom = 66.0

[node name="PlayerName" type="LineEdit" parent="GameOver"]
margin_right = 456.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 5 )
align = 1
placeholder_text = "you name"

[node name="Restart" type="Button" parent="GameOver"]
margin_top = 53.0
margin_right = 456.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 5 )
text = "RESTART"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="GameOver/Restart" to="." method="_on_Restart_pressed"]
